Change capitalization of C

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <tr>
              <td colspan="3"><input type="text" id="result"/></td>
              <!-- clearText() function will call clearText to clear the input bar -->
-             <td><input type="button" value="c" onclick="clearText()"/> </td>
+             <td><input type="button" value="C" onclick="clearText()"/> </td>
           </tr>
           <tr>
              <!-- displayAnswer("1") will call function displayAnswer to display value -->
