Fix bugs in the html file

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
        <table>
           <tr>
-             <td colspan="3"><input type="text" id="resut"/></td> <!-- Mistake here (id name) -->
+             <td colspan="3"><input type="text" id="result"/></td> <!-- Mistake here (id name) -->
              <!-- clearText() function will call clearText to clear the input bar -->
              <td><input type="button" value="C" onclick="clearText()"/> </td>
           </tr>
           <tr>
              <!-- displayAnswer("1") will call function displayAnswer to display value -->
-             <td><input type="button" value="1" onclick="displayAnswer('10')"/> </td> <!-- Mistake here (displayAnswer parameter) -->
+             <td><input type="button" value="1" onclick="displayAnswer('1')"/> </td> <!-- Mistake here (displayAnswer parameter) -->
              <td><input type="button" value="2" onclick="displayAnswer('2')"/> </td>
              <td><input type="button" value="3" onclick="displayAnswer('3')"/> </td>
              <td><input type="button" value="/" onclick="displayAnswer('/')"/> </td>
@@ -23,7 +23,7 @@
              <td><input type="button" value="4" onclick="displayAnswer('4')"/></td>
              <td><input type="button" value="5" onclick="displayAnswer('5')"/></td>
              <td><input type="button" value="6" onclick="displayAnswer('6')"/></td>
-             <td><input type="button" value="-" onclick="displayAnswer('+')"/></td> <!-- Mistake here (displayAnswer parameter) -->
+             <td><input type="button" value="-" onclick="displayAnswer('-')"/></td> <!-- Mistake here (displayAnswer parameter) -->
           </tr>
           <tr>
              <td><input type="button" value="7" onclick="displayAnswer('7')"/> </td>
